--- a/mealplan/mealplanner/templates/mealplanner/index.html
+++ b/mealplan/mealplanner/templates/mealplanner/index.html
@@ -1,1 +1,6 @@
+{% extends "mealplanner/base.html" %}
+
+{% block title %}Index{% endblock %}
+{% block content %}
 <h1>Hello from the index page!</h1>
+{% endblock %}
