--- a/mealplan/mealplanner/templates/mealplanner/base.html
+++ b/mealplan/mealplanner/templates/mealplanner/base.html
@@ -7,9 +7,29 @@
     <title>MealPlanner | {% block title %}{% endblock %}</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <div class="container">
+        <div class="row">
+            <h1>MealPlan</h1>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-lg-2">
+                <nav class="nav nav-pills flex-column">
+                    <a href="{% url 'index' %}" class="nav-link nav-item {% if request.path == '/' %}active{% endif %}">Index</a>
+                    <a href="{% url 'ingredients' %}" class="nav-link nav-item {% if 'ingredients' in request.path %}active{% endif %}">Ingredients</a>
+                    <a href="{% url 'recipes' %}" class="nav-link nav-item {% if 'recipes' in request.path %}active{% endif %}">Recipes</a>
+                    <a href="{% url 'inventory' %}" class="nav-link nav-item {% if 'inventory' in request.path %}active{% endif %}">Inventory</a>
+                    <a href="{% url 'planner' %}" class="nav-link nav-item {% if 'planner' in request.path %}active{% endif %}">Planner</a>
+                </nav>
+            </div>
+            <div class="col-md-9 col-lg-10">
+            {% block content %}{% endblock %}
+            </div>
+        </div>
+    </div>
+    <!-- JQuery + Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
 </html>
