views: use title as an h2 as well (for now

--- a/mealplan/mealplanner/templates/mealplanner/recipes.html
+++ b/mealplan/mealplanner/templates/mealplanner/recipes.html
@@ -1,6 +1,5 @@
 {% extends "mealplanner/base.html" %}
 
-{% block title %}Recipes{% endblock %}
 {% block content %}
-<h2>Mmmmm, recipes</h2>
+<h2>{% block title %}Recipes{% endblock %}</h2>
 {% endblock %}
