--- a/mealplan/mealplanner/templates/mealplanner/index.html
+++ b/mealplan/mealplanner/templates/mealplanner/index.html
@@ -1,6 +1,5 @@
 {% extends "mealplanner/base.html" %}
 
-{% block title %}Index{% endblock %}
 {% block content %}
-<h2>Hello from the index page!</h2>
+    <h2>{% block title %}Index{% endblock %}</h2>
 {% endblock %}
