--- a/mealplan/mealplanner/templates/mealplanner/ingredients.html
+++ b/mealplan/mealplanner/templates/mealplanner/ingredients.html
@@ -1,6 +1,5 @@
 {% extends "mealplanner/base.html" %}
 
-{% block title %}Ingredients{% endblock %}
 {% block content %}
-<h2>Some ingredients for ya</h2>
+<h2>{% block title %}Ingredients{% endblock %}</h2>
 {% endblock %}
