--- a/mealplan/mealplanner/templates/mealplanner/inventory.html
+++ b/mealplan/mealplanner/templates/mealplanner/inventory.html
@@ -1,6 +1,5 @@
 {% extends "mealplanner/base.html" %}
 
-{% block title %}Inventory{% endblock %}
 {% block content %}
-<h2>All your inventory</h2>
+<h2>{% block title %}Inventory{% endblock %}</h2>
 {% endblock %}
