--- a/mealplan/mealplanner/templates/mealplanner/planner.html
+++ b/mealplan/mealplanner/templates/mealplanner/planner.html
@@ -1,6 +1,5 @@
 {% extends "mealplanner/base.html" %}
 
-{% block title %}Planner{% endblock %}
 {% block content %}
-<h2>Let me plan that for ya</h2>
+<h2>{% block title %}Planner{% endblock %}</h2>
 {% endblock %}
